src/rulesyacc.output
Terminals which are not used

   TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK
   TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK
   TOKEN_DOT
   TOKEN_INPUTVALENCY
   TOKEN_SORT
   TOKEN_WITH
   TOKEN_REVERSE
   TOKEN_COMBINATION


Grammar

    0 $accept: axiom $end

    1 axiom: declaration

    2 declaration: TOKEN_GRAMMAR rules
    3            | TOKEN_INPUT term features
    4            | TOKEN_INPUT term
    5            | TOKEN_LEXICON dictionary
    6            | TOKEN_DASH features

    7 dictionary: word dictionary
    8           | word

    9 stringOrIdentifier: TOKEN_IDENTIFIER
   10                   | TOKEN_STRING

   11 word: TOKEN_FORM TOKEN_IDENTIFIER TOKEN_SEMI
   12     | TOKEN_FORM TOKEN_IDENTIFIER features TOKEN_SEMI
   13     | stringOrIdentifier lexical_entries TOKEN_SEMI
   14     | TOKEN_SEMI

   15 lexical_entries: lexical_entry TOKEN_PIPE lexical_entries
   16                | lexical_entry

   17 lexical_entry: TOKEN_IDENTIFIER features
   18              | TOKEN_IDENTIFIER

   19 @1: /* empty */

   20 rules: @1 rule rules

   21 @2: /* empty */

   22 rules: @2

   23 rule: term TOKEN_RIGHTARROW terms_vector structure_statement
   24     | term TOKEN_RIGHTARROW structure_statement

   25 terms_vector: terms_vector terms
   26             | terms

   27 terms: terms_disj
   28      | TOKEN_LBRACKET terms_disj TOKEN_RBRACKET

   29 terms_disj: terms_disj TOKEN_PIPE term
   30           | term

   31 term: TOKEN_IDENTIFIER
   32     | TOKEN_VARIABLE

   33 structure_statement: TOKEN_LBRACE list_statement TOKEN_RBRACE
   34                    | TOKEN_LBRACE TOKEN_RBRACE
   35                    | TOKEN_SEMI

   36 list_statement: statement
   37               | list_statement statement

   38 statements: TOKEN_LBRACE list_statement TOKEN_RBRACE
   39           | TOKEN_LBRACE TOKEN_RBRACE

   40 statement: statements
   41          | TOKEN_ATTEST expression_statement TOKEN_SEMI
   42          | TOKEN_PRINT expression_statement TOKEN_SEMI
   43          | TOKEN_PRINTLN expression_statement TOKEN_SEMI
   44          | features TOKEN_SEMI
   45          | left_hand_side_aff_statement TOKEN_AFF right_hand_side_aff_statement TOKEN_SEMI
   46          | left_hand_side_subset_statement TOKEN_SUBSUME right_hand_side_subset_statement TOKEN_SEMI
   47          | left_hand_side_inset_statement TOKEN_INSET right_hand_side_inset_statement TOKEN_SEMI
   48          | TOKEN_IF TOKEN_LPAR expression_statement TOKEN_RPAR statement
   49          | TOKEN_IF TOKEN_LPAR expression_statement TOKEN_RPAR statement TOKEN_ELSE statement
   50          | TOKEN_FOREACH variable TOKEN_IN expression_statement statement

   51 left_hand_side_subset_statement: features

   52 right_hand_side_subset_statement: variable
   53                                 | up
   54                                 | downdouble
   55                                 | features

   56 left_hand_side_inset_statement: down

   57 right_hand_side_inset_statement: expression_statement

   58 left_hand_side_aff_statement: updouble
   59                             | down
   60                             | variable
   61                             | TOKEN_LT variable TOKEN_COLON2 variable TOKEN_GT

   62 right_hand_side_aff_statement: expression_statement

   63 expression_statement: expression_statement TOKEN_OR expression_statement
   64                     | expression_statement TOKEN_AND expression_statement
   65                     | expression_statement TOKEN_IMPLICATION expression_statement
   66                     | expression_statement TOKEN_EQUIV expression_statement
   67                     | TOKEN_NOT expression_statement
   68                     | expression_statement TOKEN_EQUAL expression_statement
   69                     | expression_statement TOKEN_DIFF expression_statement
   70                     | expression_statement TOKEN_LT expression_statement
   71                     | expression_statement TOKEN_LE expression_statement
   72                     | expression_statement TOKEN_GT expression_statement
   73                     | expression_statement TOKEN_GE expression_statement
   74                     | expression_statement TOKEN_PLUS expression_statement
   75                     | expression_statement TOKEN_MINUS expression_statement
   76                     | expression_statement TOKEN_TIMES expression_statement
   77                     | expression_statement TOKEN_DIVIDE expression_statement
   78                     | expression_statement TOKEN_MODULO expression_statement
   79                     | TOKEN_MINUS expression_statement
   80                     | TOKEN_RAND TOKEN_LPAR TOKEN_RPAR
   81                     | TOKEN_DOUBLE
   82                     | TOKEN_INTEGER
   83                     | TOKEN_STRING
   84                     | expression_statement TOKEN_UNION expression_statement
   85                     | up
   86                     | updouble
   87                     | down
   88                     | downdouble
   89                     | features
   90                     | TOKEN_NIL
   91                     | constant
   92                     | variable
   93                     | TOKEN_LPAR expression_statement TOKEN_RPAR
   94                     | list
   95                     | dash_statement

   96 up: TOKEN_UPARROW

   97 updouble: TOKEN_UP2ARROW

   98 down: TOKEN_DOWNARROW TOKEN_INTEGER

   99 dash_statement: TOKEN_DASH TOKEN_INTEGER TOKEN_COLON TOKEN_INTEGER
  100               | TOKEN_DASH TOKEN_INTEGER

  101 downdouble: TOKEN_DOWN2ARROW
  102           | TOKEN_DOWN2ARROW TOKEN_INTEGER

  103 features: TOKEN_LBRACKET features_components TOKEN_RBRACKET
  104         | TOKEN_LBRACKET TOKEN_RBRACKET

  105 features_components: features_components TOKEN_COMMA feature
  106                    | feature

  107 feature: TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER
  108        | TOKEN_PRED TOKEN_COLON variable
  109        | TOKEN_FORM TOKEN_COLON variable
  110        | TOKEN_FORM TOKEN_COLON TOKEN_STRING
  111        | identifier TOKEN_COLON feature_value
  112        | identifier TOKEN_COLON TOKEN_STRING
  113        | variable TOKEN_COLON feature_value
  114        | variable

  115 feature_value: variable
  116              | constant
  117              | TOKEN_DOUBLE
  118              | TOKEN_INTEGER
  119              | list
  120              | features
  121              | TOKEN_NIL
  122              | TOKEN_TRUE
  123              | TOKEN_ANONYMOUS

  124 constant: identifier
  125         | identifier TOKEN_PIPE constant

  126 identifier: TOKEN_IDENTIFIER

  127 variable: TOKEN_VARIABLE

  128 list: TOKEN_LT list_elements TOKEN_GT
  129     | TOKEN_LT TOKEN_GT
  130     | TOKEN_LT list_elements TOKEN_COLON2 list_element TOKEN_GT

  131 list_elements: list_element TOKEN_COMMA list_elements
  132              | list_element

  133 list_element: variable
  134             | TOKEN_DOUBLE
  135             | TOKEN_INTEGER
  136             | constant
  137             | features
  138             | list


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_RIGHTARROW (258) 23 24
TOKEN_UPARROW (259) 96
TOKEN_UP2ARROW (260) 97
TOKEN_DOWNARROW (261) 98
TOKEN_DOWN2ARROW (262) 101 102
TOKEN_DASH (263) 6 99 100
TOKEN_LPAR (264) 48 49 80 93
TOKEN_RPAR (265) 48 49 80 93
TOKEN_LBRACE (266) 33 34 38 39
TOKEN_RBRACE (267) 33 34 38 39
TOKEN_LBRACKET (268) 28 103 104
TOKEN_RBRACKET (269) 28 103 104
TOKEN_LEFT_DOUBLE_ANGLE_QUOTATION_MARK (270)
TOKEN_RIGHT_DOUBLE_ANGLE_QUOTATION_MARK (271)
TOKEN_SEMI (272) 11 12 13 14 35 41 42 43 44 45 46 47
TOKEN_COLON (273) 99 107 108 109 110 111 112 113
TOKEN_COLON2 (274) 61 130
TOKEN_COMMA (275) 105 131
TOKEN_DOT (276)
TOKEN_GRAMMAR (277) 2
TOKEN_INPUT (278) 3 4
TOKEN_LEXICON (279) 5
TOKEN_INPUTVALENCY (280)
TOKEN_PRED (281) 107 108
TOKEN_FORM (282) 11 12 109 110
TOKEN_ATTEST (283) 41
TOKEN_PRINT (284) 42
TOKEN_PRINTLN (285) 43
TOKEN_IF (286) 48 49
TOKEN_ELSE (287) 49
TOKEN_NIL (288) 90 121
TOKEN_TRUE (289) 122
TOKEN_FOREACH (290) 50
TOKEN_IN (291) 50
TOKEN_SORT (292)
TOKEN_WITH (293)
TOKEN_REVERSE (294)
TOKEN_COMBINATION (295)
TOKEN_RAND (296) 80
TOKEN_UNION (297) 84
TOKEN_SUBSUME (298) 46
TOKEN_INSET (299) 47
TOKEN_AFF (300) 45
TOKEN_PIPE (301) 15 29 125
TOKEN_NOT (302) 67
TOKEN_OR (303) 63
TOKEN_AND (304) 64
TOKEN_IMPLICATION (305) 65
TOKEN_EQUIV (306) 66
TOKEN_PLUS (307) 74
TOKEN_MINUS (308) 75 79
TOKEN_TIMES (309) 76
TOKEN_DIVIDE (310) 77
TOKEN_MODULO (311) 78
TOKEN_EQUAL (312) 68
TOKEN_DIFF (313) 69
TOKEN_LT (314) 61 70 128 129 130
TOKEN_LE (315) 71
TOKEN_GT (316) 61 72 128 129 130
TOKEN_GE (317) 73
TOKEN_IDENTIFIER (318) 9 11 12 17 18 31 107 126
TOKEN_STRING (319) 10 83 110 112
TOKEN_INTEGER (320) 82 98 99 100 102 118 135
TOKEN_DOUBLE (321) 81 117 134
TOKEN_VARIABLE (322) 32 127
TOKEN_ANONYMOUS (323) 123
TOKEN_MINUS_U (324)
TOKEN_NOELSE (325)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
axiom (72)
    on left: 1, on right: 0
declaration (73)
    on left: 2 3 4 5 6, on right: 1
dictionary (74)
    on left: 7 8, on right: 5 7
stringOrIdentifier (75)
    on left: 9 10, on right: 13
word (76)
    on left: 11 12 13 14, on right: 7 8
lexical_entries (77)
    on left: 15 16, on right: 13 15
lexical_entry (78)
    on left: 17 18, on right: 15 16
rules (79)
    on left: 20 22, on right: 2 20
@1 (80)
    on left: 19, on right: 20
@2 (81)
    on left: 21, on right: 22
rule (82)
    on left: 23 24, on right: 20
terms_vector (83)
    on left: 25 26, on right: 23 25
terms (84)
    on left: 27 28, on right: 25 26
terms_disj (85)
    on left: 29 30, on right: 27 28 29
term (86)
    on left: 31 32, on right: 3 4 23 24 29 30
structure_statement (87)
    on left: 33 34 35, on right: 23 24
list_statement (88)
    on left: 36 37, on right: 33 37 38
statements (89)
    on left: 38 39, on right: 40
statement (90)
    on left: 40 41 42 43 44 45 46 47 48 49 50, on right: 36 37 48 49
    50
left_hand_side_subset_statement (91)
    on left: 51, on right: 46
right_hand_side_subset_statement (92)
    on left: 52 53 54 55, on right: 46
left_hand_side_inset_statement (93)
    on left: 56, on right: 47
right_hand_side_inset_statement (94)
    on left: 57, on right: 47
left_hand_side_aff_statement (95)
    on left: 58 59 60 61, on right: 45
right_hand_side_aff_statement (96)
    on left: 62, on right: 45
expression_statement (97)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87 88 89 90 91 92 93 94 95, on right: 41 42 43
    48 49 50 57 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 84 93
up (98)
    on left: 96, on right: 53 85
updouble (99)
    on left: 97, on right: 58 86
down (100)
    on left: 98, on right: 56 59 87
dash_statement (101)
    on left: 99 100, on right: 95
downdouble (102)
    on left: 101 102, on right: 54 88
features (103)
    on left: 103 104, on right: 3 6 12 17 44 51 55 89 120 137
features_components (104)
    on left: 105 106, on right: 103 105
feature (105)
    on left: 107 108 109 110 111 112 113 114, on right: 105 106
feature_value (106)
    on left: 115 116 117 118 119 120 121 122 123, on right: 111 113
constant (107)
    on left: 124 125, on right: 91 116 125 136
identifier (108)
    on left: 126, on right: 111 112 124 125
variable (109)
    on left: 127, on right: 50 52 60 61 92 108 109 113 114 115 133
list (110)
    on left: 128 129 130, on right: 94 119 138
list_elements (111)
    on left: 131 132, on right: 128 130 131
list_element (112)
    on left: 133 134 135 136 137 138, on right: 130 131 132


state 0

    0 $accept: . axiom $end
    1 axiom: . declaration
    2 declaration: . TOKEN_GRAMMAR rules
    3            | . TOKEN_INPUT term features
    4            | . TOKEN_INPUT term
    5            | . TOKEN_LEXICON dictionary
    6            | . TOKEN_DASH features

    TOKEN_DASH     shift, and go to state 1
    TOKEN_GRAMMAR  shift, and go to state 2
    TOKEN_INPUT    shift, and go to state 3
    TOKEN_LEXICON  shift, and go to state 4

    axiom        go to state 5
    declaration  go to state 6


state 1

    6 declaration: TOKEN_DASH . features
  103 features: . TOKEN_LBRACKET features_components TOKEN_RBRACKET
  104         | . TOKEN_LBRACKET TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 7

    features  go to state 8


state 2

    2 declaration: TOKEN_GRAMMAR . rules
   19 @1: .  [TOKEN_IDENTIFIER, TOKEN_VARIABLE]
   20 rules: . @1 rule rules
   21 @2: .  [$end]
   22 rules: . @2

    $end      reduce using rule 21 (@2)
    $default  reduce using rule 19 (@1)

    rules  go to state 9
    @1     go to state 10
    @2     go to state 11


state 3

    3 declaration: TOKEN_INPUT . term features
    4            | TOKEN_INPUT . term
   31 term: . TOKEN_IDENTIFIER
   32     | . TOKEN_VARIABLE

    TOKEN_IDENTIFIER  shift, and go to state 12
    TOKEN_VARIABLE    shift, and go to state 13

    term  go to state 14


state 4

    5 declaration: TOKEN_LEXICON . dictionary
    7 dictionary: . word dictionary
    8           | . word
    9 stringOrIdentifier: . TOKEN_IDENTIFIER
   10                   | . TOKEN_STRING
   11 word: . TOKEN_FORM TOKEN_IDENTIFIER TOKEN_SEMI
   12     | . TOKEN_FORM TOKEN_IDENTIFIER features TOKEN_SEMI
   13     | . stringOrIdentifier lexical_entries TOKEN_SEMI
   14     | . TOKEN_SEMI

    TOKEN_SEMI        shift, and go to state 15
    TOKEN_FORM        shift, and go to state 16
    TOKEN_IDENTIFIER  shift, and go to state 17
    TOKEN_STRING      shift, and go to state 18

    dictionary          go to state 19
    stringOrIdentifier  go to state 20
    word                go to state 21


state 5

    0 $accept: axiom . $end

    $end  shift, and go to state 22


state 6

    1 axiom: declaration .

    $default  reduce using rule 1 (axiom)


state 7

  103 features: TOKEN_LBRACKET . features_components TOKEN_RBRACKET
  104         | TOKEN_LBRACKET . TOKEN_RBRACKET
  105 features_components: . features_components TOKEN_COMMA feature
  106                    | . feature
  107 feature: . TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER
  108        | . TOKEN_PRED TOKEN_COLON variable
  109        | . TOKEN_FORM TOKEN_COLON variable
  110        | . TOKEN_FORM TOKEN_COLON TOKEN_STRING
  111        | . identifier TOKEN_COLON feature_value
  112        | . identifier TOKEN_COLON TOKEN_STRING
  113        | . variable TOKEN_COLON feature_value
  114        | . variable
  126 identifier: . TOKEN_IDENTIFIER
  127 variable: . TOKEN_VARIABLE

    TOKEN_RBRACKET    shift, and go to state 23
    TOKEN_PRED        shift, and go to state 24
    TOKEN_FORM        shift, and go to state 25
    TOKEN_IDENTIFIER  shift, and go to state 26
    TOKEN_VARIABLE    shift, and go to state 27

    features_components  go to state 28
    feature              go to state 29
    identifier           go to state 30
    variable             go to state 31


state 8

    6 declaration: TOKEN_DASH features .

    $default  reduce using rule 6 (declaration)


state 9

    2 declaration: TOKEN_GRAMMAR rules .

    $default  reduce using rule 2 (declaration)


state 10

   20 rules: @1 . rule rules
   23 rule: . term TOKEN_RIGHTARROW terms_vector structure_statement
   24     | . term TOKEN_RIGHTARROW structure_statement
   31 term: . TOKEN_IDENTIFIER
   32     | . TOKEN_VARIABLE

    TOKEN_IDENTIFIER  shift, and go to state 12
    TOKEN_VARIABLE    shift, and go to state 13

    rule  go to state 32
    term  go to state 33


state 11

   22 rules: @2 .

    $default  reduce using rule 22 (rules)


state 12

   31 term: TOKEN_IDENTIFIER .

    $default  reduce using rule 31 (term)


state 13

   32 term: TOKEN_VARIABLE .

    $default  reduce using rule 32 (term)


state 14

    3 declaration: TOKEN_INPUT term . features
    4            | TOKEN_INPUT term .  [$end]
  103 features: . TOKEN_LBRACKET features_components TOKEN_RBRACKET
  104         | . TOKEN_LBRACKET TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 7

    $default  reduce using rule 4 (declaration)

    features  go to state 34


state 15

   14 word: TOKEN_SEMI .

    $default  reduce using rule 14 (word)


state 16

   11 word: TOKEN_FORM . TOKEN_IDENTIFIER TOKEN_SEMI
   12     | TOKEN_FORM . TOKEN_IDENTIFIER features TOKEN_SEMI

    TOKEN_IDENTIFIER  shift, and go to state 35


state 17

    9 stringOrIdentifier: TOKEN_IDENTIFIER .

    $default  reduce using rule 9 (stringOrIdentifier)


state 18

   10 stringOrIdentifier: TOKEN_STRING .

    $default  reduce using rule 10 (stringOrIdentifier)


state 19

    5 declaration: TOKEN_LEXICON dictionary .

    $default  reduce using rule 5 (declaration)


state 20

   13 word: stringOrIdentifier . lexical_entries TOKEN_SEMI
   15 lexical_entries: . lexical_entry TOKEN_PIPE lexical_entries
   16                | . lexical_entry
   17 lexical_entry: . TOKEN_IDENTIFIER features
   18              | . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 36

    lexical_entries  go to state 37
    lexical_entry    go to state 38


state 21

    7 dictionary: . word dictionary
    7           | word . dictionary
    8           | . word  [$end]
    8           | word .  [$end]
    9 stringOrIdentifier: . TOKEN_IDENTIFIER
   10                   | . TOKEN_STRING
   11 word: . TOKEN_FORM TOKEN_IDENTIFIER TOKEN_SEMI
   12     | . TOKEN_FORM TOKEN_IDENTIFIER features TOKEN_SEMI
   13     | . stringOrIdentifier lexical_entries TOKEN_SEMI
   14     | . TOKEN_SEMI

    TOKEN_SEMI        shift, and go to state 15
    TOKEN_FORM        shift, and go to state 16
    TOKEN_IDENTIFIER  shift, and go to state 17
    TOKEN_STRING      shift, and go to state 18

    $default  reduce using rule 8 (dictionary)

    dictionary          go to state 39
    stringOrIdentifier  go to state 20
    word                go to state 21


state 22

    0 $accept: axiom $end .

    $default  accept


state 23

  104 features: TOKEN_LBRACKET TOKEN_RBRACKET .

    $default  reduce using rule 104 (features)


state 24

  107 feature: TOKEN_PRED . TOKEN_COLON TOKEN_IDENTIFIER
  108        | TOKEN_PRED . TOKEN_COLON variable

    TOKEN_COLON  shift, and go to state 40


state 25

  109 feature: TOKEN_FORM . TOKEN_COLON variable
  110        | TOKEN_FORM . TOKEN_COLON TOKEN_STRING

    TOKEN_COLON  shift, and go to state 41


state 26

  126 identifier: TOKEN_IDENTIFIER .

    $default  reduce using rule 126 (identifier)


state 27

  127 variable: TOKEN_VARIABLE .

    $default  reduce using rule 127 (variable)


state 28

  103 features: TOKEN_LBRACKET features_components . TOKEN_RBRACKET
  105 features_components: features_components . TOKEN_COMMA feature

    TOKEN_RBRACKET  shift, and go to state 42
    TOKEN_COMMA     shift, and go to state 43


state 29

  106 features_components: feature .

    $default  reduce using rule 106 (features_components)


state 30

  111 feature: identifier . TOKEN_COLON feature_value
  112        | identifier . TOKEN_COLON TOKEN_STRING

    TOKEN_COLON  shift, and go to state 44


state 31

  113 feature: variable . TOKEN_COLON feature_value
  114        | variable .  [TOKEN_RBRACKET, TOKEN_COMMA]

    TOKEN_COLON  shift, and go to state 45

    $default  reduce using rule 114 (feature)


state 32

   19 @1: .  [TOKEN_IDENTIFIER, TOKEN_VARIABLE]
   20 rules: . @1 rule rules
   20      | @1 rule . rules
   21 @2: .  [$end]
   22 rules: . @2

    $end      reduce using rule 21 (@2)
    $default  reduce using rule 19 (@1)

    rules  go to state 46
    @1     go to state 10
    @2     go to state 11


state 33

   23 rule: term . TOKEN_RIGHTARROW terms_vector structure_statement
   24     | term . TOKEN_RIGHTARROW structure_statement

    TOKEN_RIGHTARROW  shift, and go to state 47


state 34

    3 declaration: TOKEN_INPUT term features .

    $default  reduce using rule 3 (declaration)


state 35

   11 word: TOKEN_FORM TOKEN_IDENTIFIER . TOKEN_SEMI
   12     | TOKEN_FORM TOKEN_IDENTIFIER . features TOKEN_SEMI
  103 features: . TOKEN_LBRACKET features_components TOKEN_RBRACKET
  104         | . TOKEN_LBRACKET TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 7
    TOKEN_SEMI      shift, and go to state 48

    features  go to state 49


state 36

   17 lexical_entry: TOKEN_IDENTIFIER . features
   18              | TOKEN_IDENTIFIER .  [TOKEN_SEMI, TOKEN_PIPE]
  103 features: . TOKEN_LBRACKET features_components TOKEN_RBRACKET
  104         | . TOKEN_LBRACKET TOKEN_RBRACKET

    TOKEN_LBRACKET  shift, and go to state 7

    $default  reduce using rule 18 (lexical_entry)

    features  go to state 50


state 37

   13 word: stringOrIdentifier lexical_entries . TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 51


state 38

   15 lexical_entries: lexical_entry . TOKEN_PIPE lexical_entries
   16                | lexical_entry .  [TOKEN_SEMI]

    TOKEN_PIPE  shift, and go to state 52

    $default  reduce using rule 16 (lexical_entries)


state 39

    7 dictionary: word dictionary .

    $default  reduce using rule 7 (dictionary)


state 40

  107 feature: TOKEN_PRED TOKEN_COLON . TOKEN_IDENTIFIER
  108        | TOKEN_PRED TOKEN_COLON . variable
  127 variable: . TOKEN_VARIABLE

    TOKEN_IDENTIFIER  shift, and go to state 53
    TOKEN_VARIABLE    shift, and go to state 27

    variable  go to state 54


state 41

  109 feature: TOKEN_FORM TOKEN_COLON . variable
  110        | TOKEN_FORM TOKEN_COLON . TOKEN_STRING
  127 variable: . TOKEN_VARIABLE

    TOKEN_STRING    shift, and go to state 55
    TOKEN_VARIABLE  shift, and go to state 27

    variable  go to state 56


state 42

  103 features: TOKEN_LBRACKET features_components TOKEN_RBRACKET .

    $default  reduce using rule 103 (features)


state 43

  105 features_components: features_components TOKEN_COMMA . feature
  107 feature: . TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER
  108        | . TOKEN_PRED TOKEN_COLON variable
  109        | . TOKEN_FORM TOKEN_COLON variable
  110        | . TOKEN_FORM TOKEN_COLON TOKEN_STRING
  111        | . identifier TOKEN_COLON feature_value
  112        | . identifier TOKEN_COLON TOKEN_STRING
  113        | . variable TOKEN_COLON feature_value
  114        | . variable
  126 identifier: . TOKEN_IDENTIFIER
  127 variable: . TOKEN_VARIABLE

    TOKEN_PRED        shift, and go to state 24
    TOKEN_FORM        shift, and go to state 25
    TOKEN_IDENTIFIER  shift, and go to state 26
    TOKEN_VARIABLE    shift, and go to state 27

    feature     go to state 57
    identifier  go to state 30
    variable    go to state 31


state 44

  103 features: . TOKEN_LBRACKET features_components TOKEN_RBRACKET
  104         | . TOKEN_LBRACKET TOKEN_RBRACKET
  111 feature: identifier TOKEN_COLON . feature_value
  112        | identifier TOKEN_COLON . TOKEN_STRING
  115 feature_value: . variable
  116              | . constant
  117              | . TOKEN_DOUBLE
  118              | . TOKEN_INTEGER
  119              | . list
  120              | . features
  121              | . TOKEN_NIL
  122              | . TOKEN_TRUE
  123              | . TOKEN_ANONYMOUS
  124 constant: . identifier
  125         | . identifier TOKEN_PIPE constant
  126 identifier: . TOKEN_IDENTIFIER
  127 variable: . TOKEN_VARIABLE
  128 list: . TOKEN_LT list_elements TOKEN_GT
  129     | . TOKEN_LT TOKEN_GT
  130     | . TOKEN_LT list_elements TOKEN_COLON2 list_element TOKEN_GT

    TOKEN_LBRACKET    shift, and go to state 7
    TOKEN_NIL         shift, and go to state 58
    TOKEN_TRUE        shift, and go to state 59
    TOKEN_LT          shift, and go to state 60
    TOKEN_IDENTIFIER  shift, and go to state 26
    TOKEN_STRING      shift, and go to state 61
    TOKEN_INTEGER     shift, and go to state 62
    TOKEN_DOUBLE      shift, and go to state 63
    TOKEN_VARIABLE    shift, and go to state 27
    TOKEN_ANONYMOUS   shift, and go to state 64

    features       go to state 65
    feature_value  go to state 66
    constant       go to state 67
    identifier     go to state 68
    variable       go to state 69
    list           go to state 70


state 45

  103 features: . TOKEN_LBRACKET features_components TOKEN_RBRACKET
  104         | . TOKEN_LBRACKET TOKEN_RBRACKET
  113 feature: variable TOKEN_COLON . feature_value
  115 feature_value: . variable
  116              | . constant
  117              | . TOKEN_DOUBLE
  118              | . TOKEN_INTEGER
  119              | . list
  120              | . features
  121              | . TOKEN_NIL
  122              | . TOKEN_TRUE
  123              | . TOKEN_ANONYMOUS
  124 constant: . identifier
  125         | . identifier TOKEN_PIPE constant
  126 identifier: . TOKEN_IDENTIFIER
  127 variable: . TOKEN_VARIABLE
  128 list: . TOKEN_LT list_elements TOKEN_GT
  129     | . TOKEN_LT TOKEN_GT
  130     | . TOKEN_LT list_elements TOKEN_COLON2 list_element TOKEN_GT

    TOKEN_LBRACKET    shift, and go to state 7
    TOKEN_NIL         shift, and go to state 58
    TOKEN_TRUE        shift, and go to state 59
    TOKEN_LT          shift, and go to state 60
    TOKEN_IDENTIFIER  shift, and go to state 26
    TOKEN_INTEGER     shift, and go to state 62
    TOKEN_DOUBLE      shift, and go to state 63
    TOKEN_VARIABLE    shift, and go to state 27
    TOKEN_ANONYMOUS   shift, and go to state 64

    features       go to state 65
    feature_value  go to state 71
    constant       go to state 67
    identifier     go to state 68
    variable       go to state 69
    list           go to state 70


state 46

   20 rules: @1 rule rules .

    $default  reduce using rule 20 (rules)


state 47

   23 rule: term TOKEN_RIGHTARROW . terms_vector structure_statement
   24     | term TOKEN_RIGHTARROW . structure_statement
   25 terms_vector: . terms_vector terms
   26             | . terms
   27 terms: . terms_disj
   28      | . TOKEN_LBRACKET terms_disj TOKEN_RBRACKET
   29 terms_disj: . terms_disj TOKEN_PIPE term
   30           | . term
   31 term: . TOKEN_IDENTIFIER
   32     | . TOKEN_VARIABLE
   33 structure_statement: . TOKEN_LBRACE list_statement TOKEN_RBRACE
   34                    | . TOKEN_LBRACE TOKEN_RBRACE
   35                    | . TOKEN_SEMI

    TOKEN_LBRACE      shift, and go to state 72
    TOKEN_LBRACKET    shift, and go to state 73
    TOKEN_SEMI        shift, and go to state 74
    TOKEN_IDENTIFIER  shift, and go to state 12
    TOKEN_VARIABLE    shift, and go to state 13

    terms_vector         go to state 75
    terms                go to state 76
    terms_disj           go to state 77
    term                 go to state 78
    structure_statement  go to state 79


state 48

   11 word: TOKEN_FORM TOKEN_IDENTIFIER TOKEN_SEMI .

    $default  reduce using rule 11 (word)


state 49

   12 word: TOKEN_FORM TOKEN_IDENTIFIER features . TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 80


state 50

   17 lexical_entry: TOKEN_IDENTIFIER features .

    $default  reduce using rule 17 (lexical_entry)


state 51

   13 word: stringOrIdentifier lexical_entries TOKEN_SEMI .

    $default  reduce using rule 13 (word)


state 52

   15 lexical_entries: . lexical_entry TOKEN_PIPE lexical_entries
   15                | lexical_entry TOKEN_PIPE . lexical_entries
   16                | . lexical_entry
   17 lexical_entry: . TOKEN_IDENTIFIER features
   18              | . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 36

    lexical_entries  go to state 81
    lexical_entry    go to state 38


state 53

  107 feature: TOKEN_PRED TOKEN_COLON TOKEN_IDENTIFIER .

    $default  reduce using rule 107 (feature)


state 54

  108 feature: TOKEN_PRED TOKEN_COLON variable .

    $default  reduce using rule 108 (feature)


state 55

  110 feature: TOKEN_FORM TOKEN_COLON TOKEN_STRING .

    $default  reduce using rule 110 (feature)


state 56

  109 feature: TOKEN_FORM TOKEN_COLON variable .

    $default  reduce using rule 109 (feature)


state 57

  105 features_components: features_components TOKEN_COMMA feature .

    $default  reduce using rule 105 (features_components)


state 58

  121 feature_value: TOKEN_NIL .

    $default  reduce using rule 121 (feature_value)


state 59

  122 feature_value: TOKEN_TRUE .

    $default  reduce using rule 122 (feature_value)


state 60

  103 features: . TOKEN_LBRACKET features_components TOKEN_RBRACKET
  104         | . TOKEN_LBRACKET TOKEN_RBRACKET
  124 constant: . identifier
  125         | . identifier TOKEN_PIPE constant
  126 identifier: . TOKEN_IDENTIFIER
  127 variable: . TOKEN_VARIABLE
  128 list: . TOKEN_LT list_elements TOKEN_GT
  128     | TOKEN_LT . list_elements TOKEN_GT
  129     | . TOKEN_LT TOKEN_GT
  129     | TOKEN_LT . TOKEN_GT
  130     | . TOKEN_LT list_elements TOKEN_COLON2 list_element TOKEN_GT
  130     | TOKEN_LT . list_elements TOKEN_COLON2 list_element TOKEN_GT
  131 list_elements: . list_element TOKEN_COMMA list_elements
  132              | . list_element
  133 list_element: . variable
  134             | . TOKEN_DOUBLE
  135             | . TOKEN_INTEGER
  136             | . constant
  137             | . features
  138             | . list

    TOKEN_LBRACKET    shift, and go to state 7
    TOKEN_LT          shift, and go to state 60
    TOKEN_GT          shift, and go to state 82
    TOKEN_IDENTIFIER  shift, and go to state 26
    TOKEN_INTEGER     shift, and go to state 83
    TOKEN_DOUBLE      shift, and go to state 84
    TOKEN_VARIABLE    shift, and go to state 27

    features       go to state 85
    constant       go to state 86
    identifier     go to state 68
    variable       go to state 87
    list           go to state 88
    list_elements  go to state 89
    list_element   go to state 90


state 61

  112 feature: identifier TOKEN_COLON TOKEN_STRING .

    $default  reduce using rule 112 (feature)


state 62

  118 feature_value: TOKEN_INTEGER .

    $default  reduce using rule 118 (feature_value)


state 63

  117 feature_value: TOKEN_DOUBLE .

    $default  reduce using rule 117 (feature_value)


state 64

  123 feature_value: TOKEN_ANONYMOUS .

    $default  reduce using rule 123 (feature_value)


state 65

  120 feature_value: features .

    $default  reduce using rule 120 (feature_value)


state 66

  111 feature: identifier TOKEN_COLON feature_value .

    $default  reduce using rule 111 (feature)


state 67

  116 feature_value: constant .

    $default  reduce using rule 116 (feature_value)


state 68
